--- a/pythonprog.ipynb
+++ b/pythonprog.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Girish\n",
-      "raj\n",
+      "raju\n",
       "Girish raj\n",
       "Girishraj\n"
      ]
